[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "data-cleaner"
version = "0.1.0"
description = "CLI tool to profile and clean messy CSV datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/data_cleaner"]