[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "data-cleaner"
version = "0.1.0"
description = "CLI tool for profiling and analyzing NASA temperature anomaly dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "matplotlib>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/data_cleaner"]